# multijoin

./: .gitignore  Cargo.toml  README.md
src/: sql.rs
src/chips/: permutation_any.rs
src/data/: data_processing.rs
src/proof/: proof_obj_q3  proof_q3
src/sql/: q18_obj.rs  q1_final_v4.rs  q3_final_v1.rs  q3_final_v7.rs  q3_obj.rs  q3_op.rs  q3_temp.rs  q5_final_kzg.rs  q5_final_v4.rs  q5_obj.rs  q5_op.rs  q8_final_kzg.rs  q8_final_v3.rs  q8_obj.rs  q9_obj.rs  temp.rs
