[package]
name = "halo2-experiments"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/tuzijun111/halo2_PSE", default-features = false}
halo2_gadgets = { git = "https://github.com/tuzijun111/halo2_PSE"}
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02", default-features = false}
# halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}

# halo2_gadgets = { git = "https://github.com/zcash/halo2"}

plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

# eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", rev= "37b8aca"}
#eth-types = { git = "https://github.com/tuzijun111/halo2_zk_gadgets"}
# eth-types = { git = "https://github.com/tuzijun111/halo2_cust_gadgets"}

num-bigint = "0.4.4"
hex = "0.4.3"
arrayvec = "0.7.2"
# gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", rev= "37b8aca"}
gadgets = { git = "https://github.com/tuzijun111/halo2_zk_gadgets"}
# gadgets = { git = "https://github.com/tuzijun111/halo2_cust_gadgets"}
rand = "0.8"
group = "0.12"
# pasta_curves = "0.4"
ff = "0.13"
num-traits = "0.2"
itertools = "0.10.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
array-init = "2.1.0"
chrono = "0.4"
halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand_xorshift = "0.3"
bincode = "1.3.3"








